Improve navbar and scrollbar formatting, add bottom navbar for small screens, and other formatting fixes

--- a/src/routes/(plain)/loginregister.styl
+++ b/src/routes/(plain)/loginregister.styl
@@ -40,5 +40,6 @@ a
 			transform translate3d(0px, 0px, 0px)
 
 		div:nth-of-type(2)
-			animation 11s cubic-bezier(0.4, 0.2, 0.2, 0.2) -0.124s infinite normal none running waves, 11s ease -1.24s infinite normal none running swell
+			animation 11s cubic-bezier(0.4, 0.2, 0.2, 0.2) -0.124s infinite normal none running waves,
+				11s ease -1.24s infinite normal none running swell
 			top -174px
